--- a/assets/SASS/_home1.scss
+++ b/assets/SASS/_home1.scss
@@ -819,8 +819,267 @@
 
 ///////////// MEDIA QUERY/////////
 //// md
-@media(min-width: 992px) and (max-width: 1199px){}
+@media(min-width: 992px) and (max-width: 1199px){
+  .home-header {
+    height: auto !important;
+    padding-bottom: 40px;
+    .navbar-default {
+      margin-bottom: 0;
+      .logo-top {
+        padding: 0 !important;
+      }
+      .navbar-nav {
+        margin: 25px 25px 0 25px !important;
+      }
+      .clock {
+        display: none;
+      }
+    }
+    .container-fluid {
+      background-color: black;
+    }
+    .navbar-brand{
+      margin-left: 0 !important;
+    }
+    .navbar-header {
+      padding: 0 0 21px;
+    }
+    .navbar-collapse {
+      position: relative;
+      top: 0;
+      padding:15px !important;
+    }
+    .main-heading {
+      h1 {
+        font-size: 45px !important;
+        margin: 0 0 40px 0 !important;
+      }
+      .special-development-icons {
+        .front-end-development{
+          margin-left:20% !important;
+        }
+        .js-dev{
+          margin-left: -40px !important;
+        }
+      }
+      .btn {
+        width: 16%;
+      }
+    }
+  }
+  .about-us {
+    .about-text {
+      margin-top: 100px;
+      padding: 0;
+    }
+    .about-heading {
+      font-weight: bold;
+      font-size: 26px;
+      margin: 0 0 10px 10px !important;
+    }
+    .about-paragraph {
+      text-align: center;
+      font-size: 14px;
+    }
+    img {
+      margin-top: 20px;
+      height: 300px;
+    }
+  }
+  .third-div {
+    background-size: cover;
+    .tagline {
+      margin: -50px 0 0 10px !important;
+    }
+    .tagline-guide {
+      margin: -50px 0 0 55px !important;
+    }
+  }
+  .courses {
+    h1 {
+      margin: 30px 0 10px 0;
+    }
+    .portion-one {
+      text-align: center;
+      h5 {
+        width: 35%;
+        font-size: 10px;
+      }
+      .certified-dev-course-section {
+        height: 398px;
+      }
+      .appBakerzDevelopmentSpecialist {
+        padding: 60px 0 20px 10px;
+      }
+      .appBakerzDevelopmentSpecialist-row-two {
+        padding: 0 0 10px 10px;
+      }
+      h3 {
+        font-size: 20px;
+      }
+      p {
+        font-size: 14px;
+      }
+    }
+    .wordpress-course-section {
+      h3 {
+        color: $color-white;
+        font-size: 20px;
+      }
+      p {
+        color: $color-white;
+        font-size: 14px;
+        padding-bottom: 7px;
 
+      }
+    }
+    .desktop-course-section {
+      h3 {
+        color: $color-white;
+        font-size: 20px;
+      }
+      p {
+        color: $color-white;
+        font-size: 14px;
+        padding-bottom: 7px;
+      }
+    }
+    .short-courses {
+      text-align: left;
+      .col-md-4 {
+        padding: 8px !important;
+      }
+      h5 {
+        width: 33%;
+        font-size: 10px;
+        padding: 3px 0 3px 20px !important;
+      }
+      h3 {
+        font-size: 18px;
+        padding:40px 0 0 10px !important;
+      }
+      p {
+        font-size: 13px;
+        padding: 0 0 0 10px !important;
+        margin: 0 0 10px 0 ;
+      }
+      span {
+        font-size: 13px;
+        padding: 0 0 0 10px !important;
+      }
+      .reactjs-short-course-section-hidden {
+        display: inline-block;
+      }
+      .api-short-course-section-hidden {
+        display: inline-block;
+      }
+      .info-tech-short-course-section-hidden {
+        display: inline-block;
+      }
+    }
+    h6 {
+      font-family: $font-style;
+      font-size: 20px;
+      text-align: center;
+      padding: 40px 0 60px 0;
+      margin: 0 !important;
+      text-transform: uppercase;
+      a {
+        font-weight: 700;
+        text-decoration: none;
+        color: #000;
+        cursor: pointer;
+      }
+    }
+  }
+  .certified-courses {
+    .container {
+      padding: 30px 0;
+      img {
+        width: 80px;
+        height: 80px;
+      }
+      p {
+        font-size: 24px;
+      }
+    }
+  }
+  .create-courses {
+    padding: 20px 0;
+    h1 {
+      margin-bottom: 10px !important;
+      font-size: 24px !important;
+    }
+    .col-sm-6 {
+      text-align: center;
+    }
+    .checkbox {
+      width: 100%;
+      display: inline-block;
+      background: $color-white;
+      margin-bottom: 20px;
+      margin-right: 5px;
+    }
+    .checkbox-hidden {
+      width: 100%;
+      display: none;
+    }
+    .checkbox-extra {
+      display: inline-block;
+    }
+    label {
+      font-size: 13px;
+    }
+    .prerequisites-column {
+      .html-css {
+        width: 65%;
+        font-size: 13px;
+        h2 {
+          font-size: 18px;
+        }
+      }
+
+      .courses-duration {
+        button {
+          width: 75%;
+          height: 55px;
+          font-size: 16px;
+        }
+      }
+      ul {
+        li {
+          font-size: 13px;
+        }
+      }
+    }
+  }
+  .languages {
+    padding: 50px 0 0 0 !important;
+    .flex-container {
+      margin-bottom: 25px;
+      .lang-express {
+        margin: 0 !important;
+      }
+      .image-transform{
+        padding: 10px !important;
+        width: 60%;
+        height: 75px;
+      }
+
+    }
+
+
+
+  }
+  .recent-events{
+    padding: 30px 0;
+    h3{
+      margin: 0 0 30px 0;
+    }
+  }
+
+}
+//////
 ////// sm
 @media(min-width: 768px)and(max-width: 991px) {
   .home-header {
@@ -1110,7 +1369,7 @@
     }
   }
 }
-
+///////
 ////////xs
 @media(min-width: 320px) and (max-width: 767px) {
 
@@ -1323,11 +1582,10 @@
        text-align: center;
      }
     .checkbox{
-      width: 100%;
+      width: 125%;
       display: inline-block;
       background: $color-white;
-      margin-bottom: 20px;
-      margin-right: 5px;
+      margin: 0 0 5px 0 !important;
     }
     .checkbox-hidden{
       width: 100%;
@@ -1338,6 +1596,8 @@
     }
     label{
       font-size: 10px;
+      padding:0 !important;
+      margin: 0 !important;
     }
     .prerequisites-column {
       float: left;
@@ -1525,3 +1785,4 @@
   }
 }
 }
+/////
