--- a/assets/SASS/main.scss
+++ b/assets/SASS/main.scss
@@ -2,4 +2,6 @@
 @import "../stylesheets/_bootstrap";
 @import "style";
 @import "home1";
+@import "course";
+@import "wordpress";
 //@import "variable";
