--- a/assets/SASS/_home1.scss
+++ b/assets/SASS/_home1.scss
@@ -1603,8 +1603,9 @@
       float: left;
       background: $color-white;
       width: 100%;
-      height: 250px;
+      height: auto;
       padding: 0 20px;
+      margin:0 0 30px 0 !important;
 
       .html-css {
         width: 100%;
