--- a/assets/SASS/main.scss
+++ b/assets/SASS/main.scss
@@ -4,4 +4,7 @@
 @import "home1";
 @import "course";
 @import "wordpress";
-//@import "variable";
+//@import "enrollPage";
+@import "enrollPage";
+@import "enrollPageOne";
+@import "wordpressMeetup";
