--- a/assets/SASS/_course.scss
+++ b/assets/SASS/_course.scss
@@ -48,53 +48,6 @@
 }
 
 @media(min-width: 992px) and (max-width: 1199px){
-  .home-header {
-    height: auto !important;
-    padding-bottom: 40px;
-    .navbar-default {
-      margin-bottom: 0;
-      .logo-top {
-        padding: 0 !important;
-      }
-      .navbar-nav {
-        margin: 25px 25px 0 25px !important;
-      }
-      .clock {
-        display: none;
-      }
-    }
-    .container-fluid {
-      background-color: black;
-    }
-    .navbar-brand{
-      margin-left: 0 !important;
-    }
-    .navbar-header {
-      padding: 0 0 21px;
-    }
-    .navbar-collapse {
-      position: relative;
-      top: 0;
-      padding:15px !important;
-    }
-    .main-heading {
-      h1 {
-        font-size: 45px !important;
-        margin: 0 0 40px 0 !important;
-      }
-      .special-development-icons {
-        .front-end-development{
-          margin-left:20% !important;
-        }
-        .js-dev{
-          margin-left: -40px !important;
-        }
-      }
-      .btn {
-        width: 16%;
-      }
-    }
-  }
   .about-background-image{
     .second-div{
       .front-end-development{
@@ -108,62 +61,43 @@
   .third-div{
     font-size:18px !important;
   }
-}
-
-@media (min-width: 768px) and (max-width: 991px){
-  .home-header{
-    height: auto !important;
-    padding-bottom: 40px;
-    .navbar-default {
-      margin-bottom: 0;
-      .logo-top {
-        padding: 0 !important;
-      }
-      .navbar-nav {
-        margin: 25px 25px 0 25px !important;
-      }
-      .clock {
-        display: none;
-      }
-    }
-    .container-fluid {
-      background-color: black;
-    }
-    .navbar-header {
-      padding: 0 0 21px;
-    }
-    .navbar-collapse {
-      position: relative;
-      top: 0;
-    }
-    .main-heading {
-      h1 {
-        font-size: 40px !important;
-        margin: 50px 0;
-      }
-      .special-development-icons {
-        display: none;
-      }
-      .btn {
-        width: 25%;
-      }
+  .enroll-background {
+    .btn{
+      width:46%;
     }
   }
-  .about-background-image{
-    .second-div{
-      .front-end-development{
+
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .about-background-image {
+    .second-div {
+      .front-end-development {
         margin-left: 0 !important;
       }
-      .js-dev{
+      .js-dev {
         margin-left: 0 !important;
       }
     }
   }
-  .third-div{
-    font-size:18px !important;
+  .third-div {
+    font-size: 18px !important;
+  }
+  .enroll-background {
+    .col-lg-5 {
+      img {
+        bottom: -35px;
+      }
+      input {
+        padding: 15px 100px 15px 50px;
+        font-size: 13px;
+      }
+    }
+    .btn {
+      font-size: 16px;
+      padding: 15px 215px 15px 90px;
+    }
   }
 }
-
 @media (min-width: 320px) and (max-width: 767px){
   .about-background-image{
     .second-div{
@@ -183,4 +117,5 @@
   .enroll-background {
     display: none;
   }
+
 }
