--- a/assets/SASS/_home1.scss
+++ b/assets/SASS/_home1.scss
@@ -1,5 +1,5 @@
 .home-header {
-  background: url("../images/backg.png") no-repeat;
+  background: url("../images/backg.png") no-repeat !important;
   width: 100%;
   height:620px;
   .navbar-default {
