--- a/assets/SASS/_wordpress.scss
+++ b/assets/SASS/_wordpress.scss
@@ -1,5 +1,5 @@
-.home-header {
-  background: url("../images/desktop.jpg") no-repeat;
+.desktop-home-header{
+  background: url("../images/desktop.jpg") no-repeat !important;
   background-size:cover;
   width: 100%;
   height:100%;
@@ -88,13 +88,190 @@
 .about-background-image{
   .second-div{
     img{
-      filter: #0b2c48;
+      width: auto;
+      height:55px;
     }
     .meteor-text{
-      margin: 10px 0 35px 30px;
+      margin: 10px 0 30px 10px;
       font-weight:bold;
-      color: #0b2c48;
+      color: #000;
       font-size:13px;
     }
   }
 }
+.meteor-details{
+  background: url("../images/background5.png") no-repeat;
+  background-attachment: fixed;
+  background-size:cover;
+  .container-fluid{
+    padding: 0 !important;
+  }
+  .col-lg-12{
+    padding:0 !important;
+  }
+  .colorOnBg{
+    background-color: rgba(226, 95, 92, 0.93);
+  }
+  img{
+    margin:70px 0 40px 0;
+  }
+  p{
+    color: $color-white;
+    font-family: Raleway, sans-serif;
+    font-size: 16px;
+    padding: 0 90px 70px 125px;
+  }
+  .container{
+    margin-bottom: 0 !important;
+
+  }
+}
+
+@media(min-width: 992px) and (max-width: 1199px){
+  .desktop-home-header{
+    height: auto !important;
+    padding-bottom: 40px;
+    .navbar-default {
+      margin-bottom: 0;
+      .logo-top {
+        padding: 0 !important;
+      }
+      .navbar-nav {
+        margin: 25px 25px 0 25px !important;
+      }
+      .clock {
+        display: none;
+      }
+    }
+    .container-fluid {
+      background-color: black;
+    }
+    .navbar-brand{
+      margin-left: 0 !important;
+    }
+    .navbar-header {
+      padding: 0 0 21px;
+    }
+    .navbar-collapse {
+      position: relative;
+      top: 0;
+      padding:15px !important;
+    }
+    .main-heading {
+      h1 {
+        font-size: 45px !important;
+        margin: 0 0 40px 0 !important;
+      }
+      .special-development-icons {
+        .front-end-development{
+          margin-left:20% !important;
+        }
+        .js-dev{
+          margin-left: -40px !important;
+        }
+      }
+      .btn {
+        width: 16%;
+      }
+    }
+  }
+  .meteor-details{
+    p{
+      padding: 0 15px 70px 5px;
+    }
+  }
+}
+@media(min-width: 768px)and(max-width: 991px) {
+  .desktop-home-header{
+    height: auto !important;
+    padding-bottom: 40px;
+    .navbar-default {
+      margin-bottom: 0;
+      .logo-top {
+        padding: 0 !important;
+      }
+      .navbar-nav {
+        margin: 25px 25px 0 25px !important;
+      }
+      .clock {
+        display: none;
+      }
+    }
+    .container-fluid {
+      background-color: black;
+    }
+    .navbar-header {
+      padding: 0 0 21px;
+    }
+    .navbar-collapse {
+      position: relative;
+      top: 0;
+    }
+    .main-heading {
+      h1 {
+        font-size: 40px !important;
+        margin: 50px 0;
+      }
+      .special-development-icons {
+        display: none;
+      }
+      .btn {
+        width: 25%;
+      }
+    }
+  }
+  .meteor-details{
+    p{
+      padding: 0 70px 70px 100px;
+    }
+  }
+}
+@media(min-width: 320px) and (max-width: 767px) {
+  .desktop-home-header{
+    height: auto !important;
+    padding-bottom: 40px;
+    .navbar-default {
+      margin-bottom: 55px !important;
+      .logo-top {
+        padding: 0 !important;
+      }
+      .navbar-nav {
+        margin: 0;
+      }
+      .clock {
+        display: none;
+      }
+    }
+    .navbar-header {
+      padding: 0 0 21px;
+      background: #000;
+    }
+    .navbar-collapse {
+      position: relative;
+      top: 0;
+    }
+    .main-heading {
+      margin: 15px 0 !important;
+      h1 {
+        font-size: 30px !important;
+        margin-bottom: 15px !important;
+      }
+      .special-development-icons{
+        display: none;
+      }
+      .btn {
+        width:55%;
+        font-size: 18px;
+        font-weight: 600;
+        margin-top:20px;
+        display: inline-block;
+        border-radius: 0 !important;
+        box-shadow: 0 4px 25px darkslategrey;
+        color: #4c667a !important;
+        background-color: $color-white !important;
+
+      }
+    }
+  }
+}
+
